tests/paczka1/fuzzy1/68550807.err
Error in line 16: jtuor S594 8271
Error in line 21: S594 S998 2,3
Error in line 19: ispwAatd A938 43,4
Error in line 26: ispwAatd A585 88,1
Error in line 28: jtuor S594 364,5
Error in line 37: 1he59 S998 0,1
